# ebum

./: Procfile  manage.py  pyproject.toml  render.yaml  requirements.txt
ebusite/: settings.py  urls.py  wsgi.py
gallery/: views.py
gallery/static/: script.js  style.css
gallery/templates/: Ebu.html
