[tool.poetry]
name = "ebusite"
version = "0.1.0"
description = "Django project for Ebu Museum"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "4.2.3"
gunicorn = "20.1.0"
whitenoise = "6.5.0"
asgiref = "3.7.2"
pytz = "2023.3"
sqlparse = "0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
